release/1.20.3/VERSION.md
# 1.20.3

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.20.3```   |
| Release Time   | ```2023-12-04T12:10:32+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```12```   |
| sha1   | ```e6f6a0e3d0c9dfa08da61700fedaddfd4539c549```   |
| size   | ```436499```   |
| total size  | ```628928167```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/e6f6a0e3d0c9dfa08da61700fedaddfd4539c549/12.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```b178a327a96f2cf1c9f98a45e5588d654a3e4369```   |
| size   | ```24445920```   |
| url       | ```https://piston-data.mojang.com/v1/objects/b178a327a96f2cf1c9f98a45e5588d654a3e4369/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```4fb536bfd4a83d61cdbaf684b8d311e66e7d4c49```   |
| size   | ```49152320```   |
| url       | ```https://piston-data.mojang.com/v1/objects/4fb536bfd4a83d61cdbaf684b8d311e66e7d4c49/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-gamma```   |
| version   | ```17```   |