release/1.20.4/VERSION.md
# 1.20.4

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.20.4```   |
| Release Time   | ```2023-12-07T12:56:20+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```12```   |
| sha1   | ```e6f6a0e3d0c9dfa08da61700fedaddfd4539c549```   |
| size   | ```436499```   |
| total size  | ```628928167```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/e6f6a0e3d0c9dfa08da61700fedaddfd4539c549/12.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```fd19469fed4a4b4c15b2d5133985f0e3e7816a8a```   |
| size   | ```24445539```   |
| url       | ```https://piston-data.mojang.com/v1/objects/fd19469fed4a4b4c15b2d5133985f0e3e7816a8a/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```8dd1a28015f51b1803213892b50b7b4fc76e594d```   |
| size   | ```49150256```   |
| url       | ```https://piston-data.mojang.com/v1/objects/8dd1a28015f51b1803213892b50b7b4fc76e594d/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-gamma```   |
| version   | ```17```   |